force-app/main/default/objects/ADM_Parent_Work__c/ADM_Parent_Work__c.object-meta.xml
<CustomObject>
    <label>Related Work</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Parent Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Works</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>