force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Child_Scheduled_Build__c</fullName>
    <formula>Child_Work__r.Scheduled_Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Scheduled Build</label>
    <type>Text</type>
</CustomField>