force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Child_Scrum_Team__c</fullName>
    <formula>Child_Work__r.Scrum_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Scrum Team</label>
    <type>Text</type>
</CustomField>