force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Child_Sprint__c</fullName>
    <formula>Child_Work__r.Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Sprint</label>
    <type>Text</type>
</CustomField>