force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Subject__c.field-meta.xml
<CustomField>
    <fullName>Child_Subject__c</fullName>
    <formula>Child_Work__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Subject</label>
    <type>Text</type>
</CustomField>