force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Work__c.field-meta.xml
<CustomField>
    <fullName>Child_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Parent Work Records</relationshipLabel>
    <relationshipName>Child_Work</relationshipName>
    <type>Lookup</type>
</CustomField>