force-app/main/default/objects/ADM_Parent_Work__c/fields/Child_Work_Closed__c.field-meta.xml
<CustomField>
    <fullName>Child_Work_Closed__c</fullName>
    <formula>Child_Work__r.Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The closed flag for the child work record.  Will be 0 or 1 depending on the status of the work record.</inlineHelpText>
    <label>Child Work Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>