force-app/main/default/objects/ADM_Parent_Work__c/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is child a duplicate of parent?</label>
    <type>Checkbox</type>
</CustomField>