force-app/main/default/objects/ADM_Parent_Work__c/fields/Parent_Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Parent_Scheduled_Build__c</fullName>
    <formula>Parent_Work__r.Scheduled_Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Scheduled Build</label>
    <type>Text</type>
</CustomField>