force-app/main/default/objects/ADM_Parent_Work__c/fields/Parent_Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Parent_Scrum_Team__c</fullName>
    <formula>Parent_Work__r.Scrum_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Scrum Team</label>
    <type>Text</type>
</CustomField>