force-app/main/default/objects/ADM_Parent_Work__c/fields/Parent_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sprint__c</fullName>
    <formula>Parent_Work__r.Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Sprint</label>
    <type>Text</type>
</CustomField>