force-app/main/default/objects/ADM_Parent_Work__c/fields/Parent_Work__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Child Work Records</relationshipLabel>
    <relationshipName>Parent_Work</relationshipName>
    <type>Lookup</type>
</CustomField>