force-app/main/default/objects/ADM_Parent_Work__c/fields/Parent_Work_Subject__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Subject__c</fullName>
    <formula>Parent_Work__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Work Subject</label>
    <type>Text</type>
</CustomField>